@@ -1,3 +1,6 @@
+2015-07-20 David Hohn <david.hohn@cern.ch>
+	* optimise Count histo for data: will now copy the content of TopAnalysis builtin cutflow histo to our Count histo at the end of jobs for data
+
 2015-07-16 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonLooseEventSaver: adding 50ns un-prescaled triggers according to 
 	https://twiki.cern.ch/twiki/bin/viewauth/Atlas/LowestUnprescaled#Data_Periods
